[package]
name = "aoc-{{year}}-{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.26.2"

[lib]
doctest = false

[[bin]]
name = "aoc-{{year}}-{{project-name}}"
test = false
